--- a/index.html
+++ b/index.html
@@ -38,17 +38,17 @@
 
     <div class="ui borderless midmenu menu">
       <div class="ui nine column centered grid container">
-        <a class="item">HOME</a>
+        <a class="text item"><b>HOME</b></a>
         <div class="ui dropdown item">
-          <div class="text">ABOUT US</div>
+          <div class="text text"><b>ABOUT US</b></div>
           <div class="menu">
-            <div class="item">Newsroom</div>
-            <div class="item">Our Team</div>
-            <div class="item">Image Galleries</div>
+            <div class="text item">Newsroom</div>
+            <div class="text item">Our Team</div>
+            <div class="text item">Image Galleries</div>
           </div>
         </div>
         <div class="ui dropdown item">
-          <div class="text">FBO</div>
+          <div class="text text"><b>FBO</b></div>
           <div class="menu">
             <div class="item">Aircraft Handling</div>
             <div class="item">Fuel Services</div>
@@ -56,16 +56,16 @@
           </div>
         </div>
         <div class="ui dropdown item">
-          <div class="text">AIR TOURS</div>
+          <div class="text"><b>AIR TOURS</b></div>
           <div class="menu">
             <div class="item">Airplane Tours</div>
             <div class="item">Helicopter Tours</div>
           </div>
         </div>
-        <a class="item">FLIGHT SCHOOL</a>
-        <a class="item">PILOT SHOP</a>
-        <a class="item">LOCATION</a>
-        <a class="item">CONTACT US</a>
+        <a class="item"><b>FLIGHT SCHOOL</b></a>
+        <a class="item"><b>PILOT SHOP</b></a>
+        <a class="item"><b>LOCATION</b></a>
+        <a class="item"><b>CONTACT US</b></a>
         <a class="fitted item"><i class="search icon"></i></a>
       </div>
     </div>
@@ -186,7 +186,7 @@
       </div>
       <div class="ui column">
         <a class="item">
-          <div class="footer text">TESTIMONIALS</div>
+          <div class="footer text"><b>TESTIMONIALS</b></div>
           <hr/>
           <div class="small footer text">
             <p>
@@ -194,6 +194,8 @@
               success was made possible by the commitment and dedication of Barbers Point Aviation Services that helped
               putting into place solutions which accommodated our particular needs.”<br/><b>Gregory Blatt, Marketing and
               Communications, Finances Administration, Solar Impulse</b></p>
+
+            <br/><br/>
 
             <p>“Barbers Point Aviation Services has become our first choice for Hawaii logistical stops on trans-Pacific
               aircraft deliveries. Great folks, great fuel prices, and a dedicated staff that goes above and
@@ -204,7 +206,7 @@
       </div>
       <div class="ui column">
         <a class="item">
-          <div class="footer text">LOCATION</div>
+          <div class="footer text"><b>LOCATION</b></div>
           <hr/>
           <div class="small footer text">
             <p>
